# apple_ble

./: .clang-format  .gitignore  CMakeLists.txt  Player.h  README  README.md  adv.py  ams.h  ams.py  ancs.py  bleak_ams.py  mpris.py  org.mpris.MediaPlayer2.xml  server-glue.h  server.cpp
src/: AMSServer.cpp  AMSServer.hpp  ANCSServer.cpp  ANCSServer.hpp  BLE.cpp  BLE.hpp  MediaPlayer2.h  MediaPlayer2.hpp  Player.h  Player.hpp  Server.cpp  Server.hpp  ams-server-glue.hpp  ams.hpp  ble-const.hpp  ble.cpp  main.cpp  notify.cpp  notify.cppno  server-glue.hpp  server.cpp  tz.cpp
